--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -14,11 +14,10 @@
                     <a href="/" class="info-logo">
                          <img src="{{ site.url }}/style/images/logo-jesse.png"   title="访问 Jesse_blog" data-hover="Jesse_blog" alt="Jesse_blog" /> </a>
                     <div class="info-text">
-                        <p>Theme is <a href="http://www.liberxue.com/2017/08/03/Jekyllthemes.html" title="访问 Jekyll liberxue主题"  data-hover="Jekyll liberxue"target="_blank">Jekyll liberxue</a> by <a href="http://www.liberxue.com/about" target="_blank">liberxue</a></p>
-                        <p>Powered by <a href="{{ site.url }}/tags/#Jekyll" title="Jekyll" data-hover="Jekyll" target="_blank" rel="nofollow">Jekyll</a></p>
+                        <p>Theme is <a href="https://github.com/Liberxue/liberxue.github.io" title="访问 Jekyll liberxue主题"  data-hover="Jekyll by liberxue"target="_blank">Jekyll by liberxue</a></p>
                         <p>&copy; 2017 <a href="/feed.xml"  title="访问 jesse blog RSS" data-hover="jesse blog RSS">jesse blog RSS</a></p>
                         <p>总计文章：{{paginator.total_posts}}篇</p>
-                      <p>本blog已开源点击Fork</p><iframe src="http://ghbtns.com/github-btn.html?user=jesse&repo=jesse.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+                      <p>本blog已开源点击Fork</p><iframe src="http://ghbtns.com/github-btn.html?user=Jesse-Lam&repo=jesse-lam.github.io&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
                     </div>
                 </div>
             </div>
